# esprit-pi-stats

./: README.md  pyproject.toml
.github/workflows/: update-data.yml
docs/: app.js  data.json  index.html  style.css
esprit_tracker/: __init__.py  cli.py
