[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esprit-tracker"
version = "0.1.0"
description = "A CLI tool to track ESPRIT-PI GitHub repositories"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
esprit-tracker = "esprit_tracker.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["esprit_tracker*"]
